RESOLVED FIXED145612
Caps lock indicator should not be shown in read-only or disabled field
https://bugs.webkit.org/show_bug.cgi?id=145612
Summary Caps lock indicator should not be shown in read-only or disabled field
Daniel Bates
Reported 2015-06-03 13:08:12 PDT
We should not show the caps lock indicator in a read-only or disabled field.
Attachments
Patch (5.40 KB, patch)
2015-06-03 13:21 PDT, Daniel Bates
darin: review+
Daniel Bates
Comment 1 2015-06-03 13:21:54 PDT
Created attachment 254202 [details] Patch We need to abstract the caps lock logic so as to support automated testing. Currently we check the actual hardware keyboard state for the caps lock key to determine whether to draw the caps lock indicator. Filed bug #145613 to add support for testing the caps lock indicator in DRT/WTR.
Radar WebKit Bug Importer
Comment 2 2015-06-03 13:24:54 PDT
Daniel Bates
Comment 3 2015-06-03 15:36:11 PDT
Note You need to log in before you can comment on or make changes to this bug.