Caps lock indicator should not be shown in read-only or disabled field https://bugs.webkit.org/show_bug.cgi?id=145612 <rdar://problem/21227454>

Reviewed by Darin Adler.

.:

* ManualTests/password-caps-lock-should-not-show-in-read-only-field.html: Added.
* ManualTests/password-caps-lock-should-not-show-when-field-becomes-disabled.html: Added.
* ManualTests/password-caps-lock-should-not-show-when-field-becomes-read-only.html: Added.

Source/WebCore:

* html/TextFieldInputType.cpp:
(WebCore::TextFieldInputType::disabledAttributeChanged): Update caps lock indicator state.
(WebCore::TextFieldInputType::readonlyAttributeChanged): Ditto.
(WebCore::TextFieldInputType::shouldDrawCapsLockIndicator): Do not draw the caps lock indicator
when the field is read-only or disabled.

Canonical link: https://commits.webkit.org/163657@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185173 268f45cc-cd09-0410-ab3c-d52691b4dbfc